docs/versioned_docs/version-4.4.0/api/Renderer.mdx
---
custom_edit_url: null
---

```ts
class Renderer
```
A component that manages [Panel](Panel) and its elements

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#panels">panels</a><br/><a href="#panelCount">panelCount</a><br/><a href="#strategy">strategy</a><br/><a href="#align">align</a></div><div className="col col--6"><a href="#render">render</a><br/><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#getPanel">getPanel</a><br/><a href="#updatePanelSize">updatePanelSize</a><br/><a href="#batchInsert">batchInsert</a><br/><a href="#batchRemove">batchRemove</a><br/><a href="#checkPanelContentsReady">checkPanelContentsReady</a></div></div>
</div>

## Constructor
```ts
new Renderer(options, options.align, options.strategy)
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|options|object|||An options object|
|options.align|Constants.ALIGN \| string \| number|✔️|"center"|An [align](Flicking#align) value that will be applied to all panels|
|options.strategy|[RenderingStrategy](RenderingStrategy)|✔️|||

## Properties

### panels {#panels}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

Array of panels

**Type**: Array&lt;[Panel](Panel)&gt;

**See**:
- [Panel](Panel)

### panelCount {#panelCount}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

Count of panels

**Type**: number

### strategy {#strategy}

<div className="bulma-tags">

</div>

<div className="notification is-warning my-2">⚠️ This member is for <strong>internal</strong> use only.</div>

### align {#align}

<div className="bulma-tags">

</div>

A [Panel](Panel)'s [align](Panel#align) value that applied to all panels

**Type**: Constants.ALIGN \| string \| number

## Methods

### render {#render}

<div className="bulma-tags">

</div>

Render panel elements inside the camera element

**Returns**: this

### init {#init}

<div className="bulma-tags">

</div>

Initialize Renderer

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|||An instance of [Flicking](Flicking)|

### destroy {#destroy}

<div className="bulma-tags">

</div>

Destroy Renderer and return to initial state

**Returns**: void

### getPanel {#getPanel}

<div className="bulma-tags">

</div>

Return the [Panel](Panel) at the given index. `null` if it doesn't exists.

**Returns**: [Panel](Panel) \| null
- Panel at the given index

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number||||

**See**:
- [Panel](Panel)

### updatePanelSize {#updatePanelSize}

<div className="bulma-tags">

</div>

Update all panel sizes

**Returns**: this

### batchInsert {#batchInsert}

<div className="bulma-tags">

</div>

Insert new panels at given index
This will increase index of panels after by the number of panels added

**Returns**: Array&lt;[Panel](Panel)&gt;
- An array of prepended panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|items|Array&lt;object&gt;|||An array of items to insert|
|items.index|number|✔️||Index to insert new panels at|
|items.elements|Array&lt;any&gt;|✔️||An array of element or framework component with element in it|
|items.hasDOMInElements|boolean|✔️||Whether it contains actual DOM elements. If set to true, renderer will add them to the camera element|

### batchRemove {#batchRemove}

<div className="bulma-tags">

</div>

Remove the panel at the given index
This will decrease index of panels after by the number of panels removed

**Returns**: [Panel](Panel)[]
- An array of removed panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|items|Array&lt;object&gt;|||An array of items to remove|
|items.index|number|✔️||Index of panel to remove|
|items.deleteCount|number|✔️|1|Number of panels to remove from index|
|items.hasDOMInElements|boolean|✔️|1|Whether it contains actual DOM elements. If set to true, renderer will remove them from the camera element|

### checkPanelContentsReady {#checkPanelContentsReady}

<div className="bulma-tags">

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|checkingPanels|[Panel](Panel)[]||||

<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

