docs/versioned_docs/version-4.9.0/api/Renderer.mdx
---
custom_edit_url: null
---

```ts
class Renderer
```

<div>

</div>

A component that manages [Panel](Panel) and its elements

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#panels">panels</a><br/><a href="#rendering">rendering</a><br/><a href="#panelCount">panelCount</a><br/><a href="#strategy">strategy</a><br/><a href="#align">align</a></div><div className="col col--6"><a href="#render">render</a><br/><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#getPanel">getPanel</a><br/><a href="#updatePanelSize">updatePanelSize</a><br/><a href="#batchInsert">batchInsert</a><br/><a href="#batchInsertDefer">batchInsertDefer</a><br/><a href="#batchRemove">batchRemove</a><br/><a href="#batchRemoveDefer">batchRemoveDefer</a><br/><a href="#updateAfterPanelChange">updateAfterPanelChange</a><br/><a href="#checkPanelContentsReady">checkPanelContentsReady</a></div></div>
</div>

## constructor
```ts
new Renderer(options, options.align, options.strategy)
```

<div>

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|options|object|||An options object|
|options.align|Constants.ALIGN \| string \| number|✔️|"center"|An [align](Flicking#align) value that will be applied to all panels|
|options.strategy|object|✔️||An instance of RenderingStrategy(internal module)|

## Properties

### panels {#panels}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Array of panels

**Type**: Array&lt;[Panel](Panel)&gt;

**See**:
- [Panel](Panel)

### rendering {#rendering}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

A boolean value indicating whether rendering is in progress

**Type**: boolean

### panelCount {#panelCount}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Count of panels

**Type**: number

### strategy {#strategy}

<div>

</div>

### align {#align}

<div>

</div>

A [Panel](Panel)'s [align](Panel#align) value that applied to all panels

**Type**: Constants.ALIGN \| string \| number

## Methods

### render {#render}

<div>

</div>

Render panel elements inside the camera element

**Returns**: this

### init {#init}

<div>

</div>

Initialize Renderer

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|||An instance of [Flicking](Flicking)|

### destroy {#destroy}

<div>

</div>

Destroy Renderer and return to initial state

**Returns**: void

### getPanel {#getPanel}

<div>

</div>

Return the [Panel](Panel) at the given index. `null` if it doesn't exists.

**Returns**: [Panel](Panel) \| null
- Panel at the given index

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number||||

**See**:
- [Panel](Panel)

### updatePanelSize {#updatePanelSize}

<div>

</div>

Update all panel sizes

**Returns**: this

### batchInsert {#batchInsert}

<div>

</div>

Insert new panels at given index<br />This will increase index of panels after by the number of panels added

**Returns**: Array&lt;[Panel](Panel)&gt;
- An array of prepended panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|items|Array&lt;object&gt;|||An array of items to insert|
|items.index|number|✔️||Index to insert new panels at|
|items.elements|Array&lt;any&gt;|✔️||An array of element or framework component with element in it|
|items.hasDOMInElements|boolean|✔️||Whether it contains actual DOM elements. If set to true, renderer will add them to the camera element|

### batchInsertDefer {#batchInsertDefer}

<div>

</div>

Defers update<br />camera position & others will be updated after calling updateAfterPanelChange

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|...items|Array&lt;{index: number, elements: any[], hasDOMInElements: boolean}&gt;||||

### batchRemove {#batchRemove}

<div>

</div>

Remove the panel at the given index<br />This will decrease index of panels after by the number of panels removed

**Returns**: [Panel](Panel)[]
- An array of removed panels

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|items|Array&lt;object&gt;|||An array of items to remove|
|items.index|number|✔️||Index of panel to remove|
|items.deleteCount|number|✔️|1|Number of panels to remove from index|
|items.hasDOMInElements|boolean|✔️|1|Whether it contains actual DOM elements. If set to true, renderer will remove them from the camera element|

### batchRemoveDefer {#batchRemoveDefer}

<div>

</div>

Defers update<br />camera position & others will be updated after calling updateAfterPanelChange

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|...items|Array&lt;{index: number, deleteCount: number, hasDOMInElements: boolean}&gt;||||

### updateAfterPanelChange {#updateAfterPanelChange}

<div>

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|panelsAdded|[Panel](Panel)[]||||
|panelsRemoved|[Panel](Panel)[]||||

### checkPanelContentsReady {#checkPanelContentsReady}

<div>

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|checkingPanels|[Panel](Panel)[]||||

